--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,10 +4,10 @@
     <div id="userInfo">
         <h2>User Info</h2>
 
-        <p><strong>Name:</strong> <span id="userInfoName"></span><br />
-            <strong>Age:</strong> <span id="userInfoAge"></span><br />
-            <strong>Gender:</strong> <span id="userInfoGender"></span><br />
-            <strong>Location:</strong> <span id="userInfoLocation"></span></p>
+        <p><strong>Name:</strong> <span id="userInfoName">{{userDetail.fullname}}</span><br />
+            <strong>Age:</strong> <span id="userInfoAge">{{userDetail.age}}</span><br />
+            <strong>Gender:</strong> <span id="userInfoGender">{{userDetail.gender}}</span><br />
+            <strong>Location:</strong> <span id="userInfoLocation">{{userDetail.location}}</span></p>
     </div><!-- /USER INFO--><!-- USER LIST-->
 
     <h2>User List</h2>
